<resources>
    <string name="label" translatable="false">Label</string>
    <string name="donation_card_donation_text">Donation</string>
    <string name="smallPromoCardRatio" translatable="false">3:1</string>
    <string name="bigPromoCardRatio" translatable="false">1.7:1</string>
    <string name="organism_contract_dashboard_widget_label">Contract</string>
    <string name="organism_contract_dashboard_widget_information">Until : %s</string>
    <string name="organism_contract_dashboard_widget_content">%d of %d months</string>
    <string name="organism_contract_dashboard_widget_action_button_label">See Contract</string>
    <string name="organism_status_payment_card_label_total">Total Payment</string>
    <string name="organism_inactive_account_dashboard_widget_label"> </string>
    <string name="organism_inactive_account_dashboard_widget_content">Canceled\nAccount</string>
    <string name="organism_inactive_account_dashboard_widget_action_button_label">Visit XL Center</string>
    <string name="organism_quota_summary_dashboard_widget_label">Remaining Usage</string>
    <string name="organism_quota_summary_dashboard_widget_action_button_label">View My Package</string>
    <string name="organism_dashboard_widget_contract_expired_label">Contract Plan</string>
    <string name="organism_dashboard_widget_contract_expired_title">Your contract is over. You don\'t have active Plan</string>
    <string name="organism_no_quota_dashboard_widget_label">Oops!</string>
    <string name="organism_no_quota_dashboard_widget_content">You don\'t have an active package</string>
    <string name="organism_no_quota_dashboard_widget_content_prepaid_enterprise">Buy your favorite package at XL Store!</string>
    <string name="organism_fail_quota_dashboard_widget_content">Failed to load data,\nplease try again</string>
    <string name="organism_no_quota_dashboard_widget_action_button_label">Buy Package Now</string>
    <string name="organism_fail_quota_dashboard_widget_action_button_label">Try Again</string>
    <string name="organism_button_context_item">Visit XL Center</string>
    <string name="organism_suspended_dashboard_widget_label">Account Suspended!</string>
    <string name="organism_suspended_dashboard_widget_content">Pay your bill to activate</string>
    <string name="organism_suspended_dashboard_widget_button">Pay Your Bill</string>
    <string name="organism_balance_dashboard_widget_label">Remaining Balance</string>
    <string name="organism_balance_dashboard_widget_information_default">Active Until: %s</string>
    <string name="organism_balance_dashboard_widget_information_grace_incoming">Grace period in %d days</string>
    <string name="organism_balance_dashboard_widget_information_grace_incoming_hour">This number will be expired in %s</string>
    <string name="organism_balance_dashboard_widget_information_grace_over">Canceled in %d days</string>
    <string name="organism_balance_dashboard_widget_information_grace_hour">Canceled %s</string>
    <string name="organism_balance_dashboard_widget_information_grace_until">Grace period: %s</string>
    <string name="organism_balance_dashboard_widget_action_button_label">Top Up</string>
    <string name="organism_balance_dashboard_widget_information_izi_top_up">Add Quota</string>
    <string name="organism_balance_dashboard_widget_information_grace_today">Today</string>
    <string name="organism_balance_dashboard_widget_information_postpaid_credit">Postpaid Balance (%s)</string>
    <string name="organism_balance_dashboard_widget_information_credit_limit">Spend Limit: %s</string>
    <string name="organism_balance_dashboard_widget_information_low_credit">Your postpaid balance is running out</string>
    <string name="organism_balance_dashboard_widget_information_empty_credit">Your postpaid balance has run out</string>
    <string name="organism_balance_dashboard_widget_information_adjust_credit_limit">Adjust Spend Limit</string>
    <string name="organism_balance_dashboard_widget_information_prio_flex">PRIO Flex Balance</string>
    <string name="organism_balance_dashboard_widget_information_prio_flex_top_up">PRIO Flex Top Up</string>
    <string name="organism_balance_dashboard_widget_deposit">Deposit Balance</string>
    <string name="organism_balance_dashboard_widget_deposit_top_up">Add Deposit</string>
    <string name="organism_roaming_package_access_dashboard_widget_label">International Rate</string>
    <string name="organism_roaming_package_access_dashboard_widget_content">Get to know International\nRoaming Rate</string>
    <string name="organism_roaming_package_access_dashboard_widget_button_label">See International Rate</string>
    <string name="organism_point_dashboard_widget_label">My Points</string>
    <string name="organism_point_dashboard_widget_information">Redeem your points before 31 Dec 2021</string>
    <string name="organism_point_dashboard_widget_action_button_label">View Rewards</string>
    <string name="organism_xl_pass_access_dashboard_widget_label">XL PASS</string>
    <string name="organism_xl_pass_access_dashboard_widget_content">You don\'t have\nXL PASS yet</string>
    <string name="organism_xl_pass_access_dashboard_widget_button_label">See XL PASS</string>
    <string name="organism_quota_detail_dashboard_widget_contract_plan">Contract Plan</string>
    <string name="organism_quota_detail_dashboard_widget_expiration">Until: %s</string>
    <string name="organism_quota_detail_dashboard_widget_expirated">Until</string>
    <string name="organism_quota_detail_dashboard_widget_expirated_days">days</string>
    <string name="organism_quota_detail_dashboard_widget_expirated_months">months</string>
    <string name="organism_quota_detail_dashboard_widget_expirated_today">today</string>
    <string name="organism_quota_detail_dashboard_widget_expirated_tomorrow">tomorrow</string>
    <string name="organism_quota_detail_dashboard_widget_cancel_button_label">Stop Package</string>
    <string name="organism_quota_detail_dashboard_widget_cancel_booster_button_label">Stop Booster</string>
    <string name="organism_quota_detail_dashboard_widget_switch_plan_button_label">Switch Plan</string>
    <string name="organism_quota_detail_dashboard_widget_upgrade_plan_button_label">Upgrade</string>
    <string name="organism_quota_detail_dashboard_widget_buy_again_button_label">Buy Again</string>
    <string name="organism_quota_detail_dashboard_widget_extended_detail_label">Quota Reset Date</string>
    <string name="organism_quota_detail_dashboard_widget_change_package">Change Package</string>
    <string name="organism_quota_detail_dashboard_widget_active_until_detail_label">Active until</string>
    <string name="organism_quota_detail_dashboard_widget_valid_until_detail_label">Valid until</string>
    <string name="organism_quota_detail_dashboard_widget_slot_fee">Slot Fee</string>
    <string name="organism_quota_detail_dashboard_widget_ended_detail_label">Valid until</string>
    <string name="organism_quota_detail_dashboard_widget_contract_ended_detail_label">Contract Ended</string>
    <string name="organism_quota_detail_dashboard_widget_expiration_unlimited">Following Card</string>
    <string name="organism_voucher_card_option_expired">Expired at</string>
    <string name="organism_voucher_card_option_no_expired">Active</string>
    <string name="organism_voucher_card_option_reddem_expired">Expired</string>
    <string name="organism_voucher_card_option_reddem_active">Redeem</string>
    <string name="organism_roaming_quota_summary_dashboard_widget_label">Remaining Usage</string>
    <string name="organism_roaming_quota_summary_dashboard_widget_status_flag_active">Active</string>
    <string name="organism_roaming_quota_summary_dashboard_widget_status_flag_inactive">Non-Active</string>
    <string name="organism_roaming_quota_summary_dashboard_widget_status_flag_prio_pass" translatable="false">PRIO Pass</string>
    <string name="organism_roaming_quota_summary_dashboard_widget_status_flag_hajj">Hajj</string>
    <string name="organism_roaming_quota_summary_dashboard_widget_status_flag_prio_basic_price">Normal Price</string>
    <string name="organism_roaming_quota_summary_dashboard_widget_status_flag_roaming_off">Inactive</string>
    <string name="organism_roaming_quota_summary_dashboard_widget_status_flag_xl_pass" translatable="false">XL Pass</string>
    <string name="organism_roaming_quota_summary_dashboard_widget_status_flag_suspended">Account suspended</string>
    <string name="organism_roaming_quota_summary_dashboard_widget_activate_button_label">Activate</string>
    <string name="organism_roaming_quota_summary_dashboard_widget_deactivate_button_label">Deactivate</string>
    <string name="organism_package_option_validity">Validity %s</string>
    <string name="organism_hot_banner_store_segment_label">Special for You</string>
    <string name="organism_package_family_store_segment_label">Other Xtra Packages</string>
    <string name="organism_device_banner_store_segment_label">Easy Buy Smartphone</string>
    <string name="organism_donation_store_segment_label">With XL Fighting COVID</string>
    <string name="organism_cross_sales_store_segment_label">More Xtra with XL</string>
    <string name="organism_payment_method_option_card_change">Change</string>
    <string name="organism_payment_method_option_card_top_up">Top Up</string>
    <string name="orgamism_payment_method_option_card_balance_not_enough"> , balance not enough</string>
    <string name="organism_transaction_selected_item_card_validity">Valid until %s</string>
    <string name="organism_transaction_success_summary_card_total" translatable="false" >Total</string>
    <string name="organism_transaction_success_summary_card_transaction_id">Transaction ID</string>
    <string name="organism_transaction_success_summary_card_see_detail">View Details</string>
    <string name="organism_transaction_success_point_gained_amount">You got %d Points</string>
    <string name="organism_transaction_with_balance_point_gained_amount">+%s Point for Activate using balance</string>
    <string name="organism_transaction_summary_row_label_total">Total Amount</string>
    <string name="organism_transaction_summary_row_label_references">Transaction ID</string>
    <string name="organism_network_card_see">Look Here</string>
    <string name="quota_data_unlimited" translatable="false">Unlimited</string>
    <string name="quota_data_value">%s %s</string>
    <string name="quota_data_value_fup" translatable="false">FUP %s%s</string>
    <plurals name="quota_voice_value">
        <item quantity="zero">%d Minutes</item>
        <item quantity="one">%d Minutes</item>
        <item quantity="other">%d Minutes</item>
    </plurals>
    <plurals name="quota_custom_value">
        <item quantity="zero">%d Mins</item>
        <item quantity="one">%d Mins</item>
        <item quantity="other">%d Mins</item>
    </plurals>
    <string name="organism_roaming_service_roaming_toggle_text">Roaming Service</string>
    <string name="organism_roaming_service_roaming_toggle_automatic_title">Roaming Active Automatically</string>
    <string name="organism_roaming_service_roaming_toggle_automatic_description">Travel comfortably with automatic activation of roaming services</string>
    <string name="modem_status_off">Modem is OFF</string>
    <string name="modem_label">Modem Status</string>
    <string name="modem_off_information">Check the cable and make sure POWER light is on</string>
    <string name="modem_connected_device_label">Connected Devices</string>
    <string name="modem_connected_device_counted">%s Devices</string>
    <string name="modem_see_information_cta">See Modem Information</string>
    <string name="modem_profile_label">Modem Profile</string>
    <string name="modem_profile_network_name_title">Network Name</string>
    <string name="modem_profile_button_title">Change Network Name &amp; Password</string>
</resources>