<?xml version="1.0" encoding="utf-8"?>
<com.myxlultimate.component.template.cardWidget.CardWidget
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cwaIconMode="FULL_RIGHT"
    app:label="@string/organism_roaming_package_access_dashboard_widget_label"
    app:icon="@drawable/icon_xtra_combo"
    app:actionButtonLabel="@string/organism_roaming_package_access_dashboard_widget_button_label">

    <TextView
        style="@style/TextAppearance.MudComponents.H4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/organism_roaming_package_access_dashboard_widget_content"/>

</com.myxlultimate.component.template.cardWidget.CardWidget>


