<?xml version="1.0" encoding="utf-8"?>
<com.myxlultimate.component.template.cardWidget.CardWidget
    android:id="@+id/containerView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cwaIconMode="LARGE"
    app:icon="?attr/inActiveAccountIcon"
    app:label="@string/organism_inactive_account_dashboard_widget_label"
    app:actionButtonLabel="@string/organism_inactive_account_dashboard_widget_action_button_label">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextAppearance.MudComponents.H4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/organism_inactive_account_dashboard_widget_content"/>

</com.myxlultimate.component.template.cardWidget.CardWidget>