<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="@dimen/mud_dimens_3dp"
    app:cardCornerRadius="@dimen/mud_dimens_16dp"
    android:layout_margin="@dimen/mud_dimens_4dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/mud_dimens_16dp"
        android:id="@+id/containerView"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/labelView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MudComponents.H6"
            android:textColor="@color/mud_palette_basic_dark_grey"
            android:text="@string/modem_profile_label"
            android:layout_marginBottom="@dimen/mud_dimens_8dp"
            />
        <TextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modem_profile_network_name_title"
            android:paddingBottom="@dimen/mud_dimens_4dp"
            android:textAppearance="@style/TextAppearance.MudComponents.Body3"
            android:textColor="@color/mud_palette_basic_dark_grey"
            />
        <TextView
            android:id="@+id/ssidNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mud_dimens_16dp"
            android:textAppearance="@style/TextAppearance.MudComponents.H5"/>

        <LinearLayout
            android:id="@+id/noticeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >
            <ImageView
                android:layout_width="@dimen/mud_dimens_20dp"
                android:layout_height="@dimen/mud_dimens_20dp"
                android:src="@drawable/ic_disabled_exclamation_mark"
                android:layout_marginEnd="@dimen/mud_dimens_4dp"
                />
            <TextView
                android:id="@+id/tvWarningView"
                android:layout_marginBottom="@dimen/mud_dimens_16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/mud_dimens_8dp"
                android:textColor="@color/mud_palette_basic_dark_grey"
                android:textAppearance="@style/TextAppearance.MudComponents.Body3"/>
        </LinearLayout>
        <Button
            android:id="@+id/actionButtonView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonAppearance.MudComponents.Secondary"
            android:text="@string/modem_profile_button_title"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>